<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="app_font">GodoM.ttf</string>
    <string name="app_name">ALPHACLO</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="no_data">No data</string>
    <string name="server_url">http://sgd.cafe24app.com/</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_report">Report</string>
    <string name="title_devices">Device Scan</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_service">Unknown service</string>
</resources>
