<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp">
        <TextView android:textSize="18sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_device_address" />
        <Space android:layout_width="5dp" android:layout_height="wrap_content" />
        <TextView android:textSize="18sp" android:id="@+id/device_address" android:layout_width="match_parent" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp">
        <TextView android:textSize="18sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_state" />
        <Space android:layout_width="5dp" android:layout_height="wrap_content" />
        <TextView android:textSize="18sp" android:id="@+id/connection_state" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/disconnected" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp">
        <TextView android:textSize="18sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_data" />
        <Space android:layout_width="5dp" android:layout_height="wrap_content" />
        <TextView android:textSize="18sp" android:id="@+id/data_value" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/no_data" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp">
        <TextView android:textSize="18sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Left" />
        <Space android:layout_width="5dp" android:layout_height="wrap_content" />
        <TextView android:textSize="18sp" android:id="@+id/left_data_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_data" />
        <Space android:layout_width="20dp" android:layout_height="wrap_content" />
        <TextView android:textSize="18sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Right" />
        <Space android:layout_width="5dp" android:layout_height="wrap_content" />
        <TextView android:textSize="18sp" android:id="@+id/right_data_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_data" />
    </LinearLayout>
    <Button android:id="@+id/startButton" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="START" />
    <ExpandableListView android:id="@+id/gatt_services_list" android:layout_width="match_parent" android:layout_height="wrap_content" />
</LinearLayout>
